Fix min-height so play button is visible on small devices 280px width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,6 +296,9 @@ footer {
    #computer{
     font-size: 1rem;
    }
+   .game-area{
+    min-height: 410px;
+   }
 }
 
 @media screen and (max-width: 480px) {
@@ -330,8 +333,7 @@ footer {
        #computer{
         font-size: 1.5rem;
        }
-
-
+       
 }
 
 @media screen and (max-width: 768px) {
